# rydopt

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  cluster_gate_optimization.py  gate_optimization.py  plots_paper_CCCZ_perfectBlockade.py  plots_paper_CCZ_finiteV.py  plots_paper_CCZ_perfectBlockade.py  plots_paper_CZCZCZ_finiteV.py  plots_paper_CZCZCZ_perfectBlockade.py  plots_paper_CZ_perfectBlockade.py  pulse_postprocessing.py  pulse_verification.py  pulse_visualization.py  pulses.py  pyproject.toml
.github/workflows/: notebooks.yml  pre-commit.yml  publish.yml  tests.yml
docs/: Makefile  about.rst  concepts.rst  conf.py  index.rst  install.rst  make.bat  tutorials.rst
docs/_templates/: layout.html
docs/api/: characterization.rst  gates.rst  hamiltonians.rst  optimization.rst  pulses.rst  simulation.rst
docs/contribute/: development.rst  internal.rst  internal_gate_methods.rst  internal_protocols.rst  internal_subsystem_hamiltonians.rst
docs/development/: subsystem_hamiltonians.rst
docs/examples/: gate_analysis.py  gate_family_quick_start.ipynb  gate_optimization_multi.py  gate_optimization_single.py  gpu_acceleration.ipynb  gpu_execution.ipynb  gpu_execution.py  infidelity_history.py  smooth.ipynb  (+8 more)
examples/: cluster_gate_optimization.py  gate_analysis.py  gate_optimization.py  gate_optimization_multi.py  gate_optimization_single.py  gpu_execution.py  infidelity_history.py
tests/: conftest.py  test_cccz.py  test_ccz.py  test_cz.py  test_duration_interpolation.py  test_fidelity.py  test_gate_family.py  test_gate_fidelity.py  test_gates_asym.py  test_minimal.py  test_optimization.py  test_parametrized_gate.py  test_reproduction.py  test_simulation.py  test_subsystem_hamiltonians.py  test_two_photon_pulse_ansatz.py
(+74 files in other folders)
