[project]
name = "rydopt"
version = "0.1.0"
description = "Multiqubit Rydberg Gate Optimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffrax>=0.7.0",
    "jax>=0.4.38",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "optax>=0.2.5",
    "qutip>=5.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinxcontrib-napoleon>=0.7",
]
