[project]
name = "RydOpt"
version = "0.1.0"
description = "Multiqubit Rydberg Gate Optimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffrax>=0.5.0",
    "jax>=0.4.34",
    "jaxlib>=0.4.34",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "optax>=0.2.2",
    "qutip>=5.2.2",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "sphinx<8.2.0", # Using an older version of sphinx avoids https://github.com/sphinx-doc/sphinx/issues/14003
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autobuild>=2024.10.3",
    "sphinxcontrib-napoleon>=0.7",
    "nbsphinx>=0.9.7",
    "sphinx-tabs>=3.4.7",
]
cuda12 = [
    "jax[cuda12]>=0.4.34",
]

[tool.ruff.lint]
ignore = ["E741"]
